<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.ghostdetctor.ghost_detector.ui.ghost.collection.ScarySpiritsFragment">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvScarySpirits"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.core.widget.NestedScrollView>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clNoGhost"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/ivNoGhost"
            android:layout_width="66dp"
            android:layout_height="86dp"
            android:layout_marginTop="80dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/img_no_ghost"/>
        <TextView
            android:id="@+id/tvNoGhost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            android:text="@string/no_ghost_in_here"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivNoGhost"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/svn_gilroy"/>
        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="@string/you_need_to_capture_ghost_first"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvNoGhost"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/svn_gilroy"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clScan"
            android:layout_width="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv2"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/ivScan"
                android:layout_width="200dp"
                android:layout_height="52dp"
                android:src="@drawable/img_start_scan"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginHorizontal="5dp"
                android:gravity="center"
                android:text="@string/start_scan"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:fontFamily="@font/svn_gilroy"
                app:layout_constraintStart_toStartOf="@id/ivScan"
                app:layout_constraintEnd_toEndOf="@id/ivScan"
                app:layout_constraintTop_toTopOf="@id/ivScan"
                app:layout_constraintBottom_toBottomOf="@id/ivScan"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>



</FrameLayout>